# libthreadx-sys

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml  prebuilt.toml
.github/workflows/: ci.yml
examples/: demo_threadx.rs
src/: control_blocks.rs  error_checked.rs  lib.rs  performance_info.rs  unchecked.rs
src/doc/: tx_block_allocate.md  tx_block_pool_create.md  tx_block_pool_delete.md  tx_block_pool_info_get.md  tx_block_pool_performance_info_get.md  tx_block_pool_performance_system_info_get.md  tx_block_pool_prioritize.md  tx_block_release.md  tx_byte_allocate.md  tx_byte_pool_create.md  tx_byte_pool_delete.md  tx_byte_pool_info_get.md  tx_byte_pool_performance_info_get.md  tx_byte_pool_performance_system_info_get.md  tx_byte_pool_prioritize.md  tx_byte_release.md  tx_event_flags_create.md  tx_event_flags_delete.md  tx_event_flags_get.md  tx_event_flags_info_get.md  tx_event_flags_performance_info_get.md  tx_event_flags_performance_system_info_get.md  tx_event_flags_set.md  tx_event_flags_set_notify.md  tx_interrupt_control.md  tx_mutex_create.md  tx_mutex_delete.md  tx_mutex_get.md  tx_mutex_info_get.md  tx_mutex_performance_info_get.md  tx_mutex_performance_system_info_get.md  tx_mutex_prioritize.md  tx_mutex_put.md  tx_queue_create.md  tx_queue_delete.md  tx_queue_flush.md  tx_queue_front_send.md  tx_queue_info_get.md  tx_queue_performance_info_get.md  tx_queue_performance_system_info_get.md  (+42 more)
src/port/: armvxm.rs  linux.rs  win32.rs
tests/: object_creation_id.rs
